# winds

./: .envrc  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  samconfig.toml  setup_dynamodb.sh
docker/dynamodb/: shared-local-instance.db
events/: connect.json  disconnect.json
src/common/: api_client.py  common.mk  connection_store.py  decorators.py  dispatch_repo.py  models.py  utils.py
src/common/payloads/: error_payload.py
src/common/repo/: abstract_repo.py  base_repo.py  connection_repo.py  dispatch_repo.py
src/debug-client/: main.py
src/lambdas/: lambdas.mk
src/lambdas/lambda_connect/: connect.py
src/lambdas/lambda_default/: default.py
src/lambdas/lambda_disconnect/: disconnect.py
src/lambdas/lambda_send_weights/: send_weights.py
src/server/: main.py
terraform/: .terraform.lock.hcl  api_gateway.tf  api_gateway_routes.tf  cloudwatch.tf  dynamodb.tf  lambdas.tf  policies.tf  roles.tf  terraform.tf  terraform.tfstate  terraform.tfstate.backup
tests/unit/common/: test_decorators.py
tests/unit/common/repo/: test_base_repo.py
