[tool.poetry]
name = "winds"
version = "0.1.0"
description = ""
authors = ["Ben Jones"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.38"
botocore = "^1.34.38"
pydantic = "^2.6.1"
websockets = "^12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
moto = "^5.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]
